@@ -25,6 +25,7 @@ Release:    v2014012405
 - Removed restriction on word count and content length if accepting any file type in PP.
 - Removed restriction in PP to allow submissions after the due date.
 - Automatic connection test and upgrade check in settings stopped and changed to buttons.
+- User creation removed from restore procedure.
 - Fixes:
 	> User could submit to Turnitin Assignment without accepting Moodle disclaimer
 	> Postgres type error when searching unlinked users query
